themes/e-commerce/static/css/e-commerce.css
/* ... */
.call-us:hover, .call-us:visited{color:#755239;}
.img-team{max-width:50%;}
.box-item {
    padding-top: 15px;
}
.box-item:hover{
    box-shadow: 0px 0px 12px #ccc;
}
.text-price{
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}
.single-page-price{
    font-size: 24px;
}
.text-current-price {
    color: #d21f30;
}
.text-original-price{
    text-decoration: line-through;
}

.text-discount-percent {
    padding: 3px 5px;
    margin: 0 0 0 5px;
    background: #D4232B;
    color: #fff;
}

.product-desc {

}
.product-article {
    padding: 0.2em 1em;
    margin-top: 1em;
}

.bg-logo-green, .bg-logo-green a {
    background-color: #C5F442;
    color: #532416;
}

.bg-logo-brown{
    border-top: 1px solid #532416;
    /*color: #532416;*/
}

.blog-time {
    line-height: 1.6em;
    font-size: 14px;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: 500;
    font-style: normal;
    color: rgba(28,28,28,.5);
    opacity: .7;
}

.blog-link {
    margin: 10px 0;
    display: block;
}

.blog-title {
    text-transform: none;
    letter-spacing: 1px;
    font-weight: 500;
    font-style: normal;
}
.blog-title-article{
    margin-bottom: 1em;
}
.blog-title-article h3{
    font-size: 42px;
    line-height: 1.1em;
    text-transform: none;
    letter-spacing: 0px;
    font-weight: 200;
    font-style: normal;
    font-family: "Roboto Slab";
}

.blog-article, .blog-article p{
    font-family: "Roboto Slab";
    line-height: 2em;
}

.sp-wrap {
    max-width: 100%;
}

